--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,61 @@
-/* You can add global styles to this file, and also import other style files */
+.body {
+  background: #212529!important;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+}
+
+footer.my-5.pt-5.text-muted.text-center.text-small {
+  padding: 0!important;
+  margin: 20px 0!important;
+}
+
+.container-width {
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.col-md-7.col-lg-8 {
+  width: 100%;
+  margin: 150px 0 0;
+  background: #212529;
+  padding: 35px;
+}
+
+.white {
+  color: white;
+}
+
+button.btn.btn-success {
+  width: 100%;
+}
+
+p.error {
+  color: crimson;
+  margin: 15px 0 0;
+}
+
+div.album.py-3.bg-light {
+  height: 84vh;
+  overflow: scroll;
+}
+
+.container-padding {
+  padding: 0 0 15px;
+}
+
+table {
+  padding: 5px 10px;
+  border-collapse: inherit;
+  background: white;
+}
+
+td.login {
+  padding: 10px 0;
+}
+
+td.hand {
+  padding: 0 30px 0 50px;
+}
